css/styling.css
body { margin:0;position:fixed;top:0;right:0;bottom:0;left:0; }

body {
    font-family: 'Open Sans', sans-serif;
}

.title {
    font-size: 18px;
    font-weight: 700;
}

circle {
    fill: white;
    stroke: black;
    stroke-width: 2px;
}

.container{
    display: flex;
    flex-direction: row;
    background: #fff;
    top: 110px;
}

.innerContainer {
    top: 20px;
    margin-top: 40px;
    margin-left: 100px;
    width: 450px;
    position:relative;
}

.innerContainer2 {
    top: 20px;
    margin-top: 40px;
    width:90%;
    margin-left: 100px;
    position:relative;


}

/**Start of District Styling**/

path {
    stroke-linejoin: round;
    stroke-linecap: round;
}

.districts {
    fill: #bbb;
}
/**
.districts :hover {
    fill: orange;
}
**/
.district-boundaries {
    pointer-events: none;
    fill: none;
    stroke: #fff;
    stroke-width: .5px;
}

.state-boundaries {
    pointer-events: none;
    fill: none;
    stroke: #fff;
    stroke-width: 1.5px;
}
/**End of District Styling**/

